--- a/Shopbot.ipynb
+++ b/Shopbot.ipynb
@@ -14,7 +14,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "c762aa0b624b4a6381eb27d14b374eb0": {
+        "8e44b624894a4fe09ae81f41155d07bb": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -29,13 +29,13 @@
             "_view_name": "VBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_3daafcf72c4e403b963e93a89caa47c7",
-              "IPY_MODEL_545fa246de5542718ab63b301f006035"
+              "IPY_MODEL_ea07236118d54b3f922d957fccf786c1",
+              "IPY_MODEL_7a6ea3238dbe4f4e84e7b0a73ea508ed"
             ],
-            "layout": "IPY_MODEL_6defb15e8cfc4e478b49e6f9ca5fab15"
+            "layout": "IPY_MODEL_c0543f98130744b69019ef2a07b5e582"
           }
         },
-        "3daafcf72c4e403b963e93a89caa47c7": {
+        "ea07236118d54b3f922d957fccf786c1": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "TextModel",
           "model_module_version": "1.5.0",
@@ -52,13 +52,13 @@
             "description": "",
             "description_tooltip": null,
             "disabled": false,
-            "layout": "IPY_MODEL_f00fdb279db34cde99a8299448ad1358",
+            "layout": "IPY_MODEL_a80b431e26cb4fb082672d2546f64682",
             "placeholder": "Enter text here…",
-            "style": "IPY_MODEL_0fb4e2d625a044f4af510b7c4f27bce6",
+            "style": "IPY_MODEL_337648b9321f4d84895e4b64cd5028da",
             "value": ""
           }
         },
-        "545fa246de5542718ab63b301f006035": {
+        "7a6ea3238dbe4f4e84e7b0a73ea508ed": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -75,12 +75,12 @@
             "description": "Chat!",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_e8f6894358744176a8f1459d04ae24f3",
-            "style": "IPY_MODEL_c629def3b806412a8d039e88b0f849ff",
+            "layout": "IPY_MODEL_98284015c8d544fc949ee75062fad033",
+            "style": "IPY_MODEL_7a97cba8bad2421b987d49c8b0af0a50",
             "tooltip": ""
           }
         },
-        "6defb15e8cfc4e478b49e6f9ca5fab15": {
+        "c0543f98130744b69019ef2a07b5e582": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -132,7 +132,7 @@
             "width": null
           }
         },
-        "f00fdb279db34cde99a8299448ad1358": {
+        "a80b431e26cb4fb082672d2546f64682": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -184,7 +184,7 @@
             "width": null
           }
         },
-        "0fb4e2d625a044f4af510b7c4f27bce6": {
+        "337648b9321f4d84895e4b64cd5028da": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -199,7 +199,7 @@
             "description_width": ""
           }
         },
-        "e8f6894358744176a8f1459d04ae24f3": {
+        "98284015c8d544fc949ee75062fad033": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -251,7 +251,7 @@
             "width": null
           }
         },
-        "c629def3b806412a8d039e88b0f849ff": {
+        "7a97cba8bad2421b987d49c8b0af0a50": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -267,7 +267,7 @@
             "font_weight": ""
           }
         },
-        "76ae806b323e4481918532225011870a": {
+        "9fbc05883b9e478eb4ddbff12c772eb9": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "VBoxModel",
           "model_module_version": "1.5.0",
@@ -282,13 +282,13 @@
             "_view_name": "VBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_c97232f7bab644148269e122944e46e8",
-              "IPY_MODEL_fff8c9df5ef24f469f6f76f1c262d1b0"
+              "IPY_MODEL_4707890617fe4fd5b2329b796572219d",
+              "IPY_MODEL_24386898224b4c7c9866e0583ed501d6"
             ],
-            "layout": "IPY_MODEL_218907bbc8c94d2bbe1cafccc7d03dfc"
+            "layout": "IPY_MODEL_b89629c95a1841c686e15e162ad62857"
           }
         },
-        "c97232f7bab644148269e122944e46e8": {
+        "4707890617fe4fd5b2329b796572219d": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -301,7 +301,7 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_6290fa176ef54f91afcc13cb073c440d",
+            "layout": "IPY_MODEL_0447a6372f34458596e1a3412359f8c6",
             "msg_id": "",
             "outputs": [
               {
@@ -311,7 +311,7 @@
                   "application/vnd.jupyter.widget-view+json": {
                     "version_major": 2,
                     "version_minor": 0,
-                    "model_id": "1d60a2f0a64f44a4908ce801f4df0d4a"
+                    "model_id": "9c4b7237ac7741f1a6558285034238dd"
                   }
                 },
                 "metadata": {}
@@ -319,7 +319,7 @@
             ]
           }
         },
-        "fff8c9df5ef24f469f6f76f1c262d1b0": {
+        "24386898224b4c7c9866e0583ed501d6": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -332,7 +332,7 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_4edd1dfc970242edaf2f655d657121c4",
+            "layout": "IPY_MODEL_eb69b4af6c5b4fe0ade5716503af0465",
             "msg_id": "",
             "outputs": [
               {
@@ -342,7 +342,7 @@
                   "application/vnd.jupyter.widget-view+json": {
                     "version_major": 2,
                     "version_minor": 0,
-                    "model_id": "348d7a15994c40289957627c9272b68e"
+                    "model_id": "62f4518afe5d42248bdf9cbd197ce468"
                   }
                 },
                 "metadata": {}
@@ -350,7 +350,7 @@
             ]
           }
         },
-        "218907bbc8c94d2bbe1cafccc7d03dfc": {
+        "b89629c95a1841c686e15e162ad62857": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -402,7 +402,7 @@
             "width": null
           }
         },
-        "1d60a2f0a64f44a4908ce801f4df0d4a": {
+        "9c4b7237ac7741f1a6558285034238dd": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -417,13 +417,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_0563097fcee44bf59423df29e68be8f3",
+            "layout": "IPY_MODEL_148f5422de2d44749ef5450591db6a97",
             "placeholder": "​",
-            "style": "IPY_MODEL_302a1585536e40cf902acedfb04bd74b",
+            "style": "IPY_MODEL_d88ac7d11c124f6fb5bb908f06547f3e",
             "value": "<b>User:</b> Hi"
           }
         },
-        "348d7a15994c40289957627c9272b68e": {
+        "62f4518afe5d42248bdf9cbd197ce468": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -438,13 +438,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_c7baf7b917ac4805b63dd82e09f57b9e",
+            "layout": "IPY_MODEL_860e43c890ee443d9a79c1578392acf6",
             "placeholder": "​",
-            "style": "IPY_MODEL_cf2bf6b8779d486687052d71e3cd8c30",
-            "value": "<b>Assistant:</b> Hello! Welcome to Denniz Designz. How can I assist you today? Are you looking for anything specific, or would you like some recommendations? 😊"
+            "style": "IPY_MODEL_08f217700a42480cb26a8a197c78e844",
+            "value": "<b>Assistant:</b> Hello! Welcome to Denniz Designz. How can I assist you today? Are you looking for something specific or need any recommendations? 😊"
           }
         },
-        "6290fa176ef54f91afcc13cb073c440d": {
+        "0447a6372f34458596e1a3412359f8c6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -496,7 +496,7 @@
             "width": null
           }
         },
-        "4edd1dfc970242edaf2f655d657121c4": {
+        "eb69b4af6c5b4fe0ade5716503af0465": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -548,7 +548,7 @@
             "width": null
           }
         },
-        "0563097fcee44bf59423df29e68be8f3": {
+        "148f5422de2d44749ef5450591db6a97": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -600,7 +600,7 @@
             "width": null
           }
         },
-        "302a1585536e40cf902acedfb04bd74b": {
+        "d88ac7d11c124f6fb5bb908f06547f3e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -615,7 +615,7 @@
             "description_width": ""
           }
         },
-        "c7baf7b917ac4805b63dd82e09f57b9e": {
+        "860e43c890ee443d9a79c1578392acf6": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -667,7 +667,7 @@
             "width": null
           }
         },
-        "cf2bf6b8779d486687052d71e3cd8c30": {
+        "08f217700a42480cb26a8a197c78e844": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -699,9 +699,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "08ca5d75-f2f1-4c1f-96dd-0e24df002122"
+        "outputId": "9ca4f64c-7f41-4d25-f172-f985f5265a75"
       },
-      "execution_count": 50,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 58,
       "metadata": {
         "id": "pVjc10dtuVWZ"
       },
@@ -777,12 +777,14 @@
       "cell_type": "code",
       "source": [
         "# API keys\n",
-        "MY_OPENAI_KEY = os.getenv('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')\n",
-        "MY_COMET_KEY = os.getenv('b0cf8WDZjJcy57DMsuBlswIFw')\n",
+        "from google.colab import userdata\n",
+        "\n",
+        "OPENAI_API_KEY = userdata.get('MY_OPENAI_KEY')\n",
+        "COMET_API_KEY = userdata.get('MY_COMET_KEY')\n",
         "\n",
         "\n",
         "comet_ml.login(project_name=\"ecom_shopbot\",\n",
-        "               api_key= \"b0cf8WDZjJcy57DMsuBlswIFw\")\n",
+        "               api_key= COMET_API_KEY)\n",
         "exp = comet_ml.start()"
       ],
       "metadata": {
@@ -790,9 +792,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BOsBrG7mueLn",
-        "outputId": "02e858fa-8ec2-4ba0-e24d-5f6c7f307f54"
+        "outputId": "50e4acc1-4d5c-4786-f4fa-0c6611e17982"
       },
-      "execution_count": 52,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,7 +937,7 @@
       "metadata": {
         "id": "ornpvDeBu8Eb"
       },
-      "execution_count": 53,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -955,7 +957,7 @@
       "metadata": {
         "id": "Nyl6_E0wnqAt"
       },
-      "execution_count": 54,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -1014,33 +1016,33 @@
         "id": "ti0pHCUPugov",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 180,
+          "height": 145,
           "referenced_widgets": [
-            "c762aa0b624b4a6381eb27d14b374eb0",
-            "3daafcf72c4e403b963e93a89caa47c7",
-            "545fa246de5542718ab63b301f006035",
-            "6defb15e8cfc4e478b49e6f9ca5fab15",
-            "f00fdb279db34cde99a8299448ad1358",
-            "0fb4e2d625a044f4af510b7c4f27bce6",
-            "e8f6894358744176a8f1459d04ae24f3",
-            "c629def3b806412a8d039e88b0f849ff",
-            "76ae806b323e4481918532225011870a",
-            "c97232f7bab644148269e122944e46e8",
-            "fff8c9df5ef24f469f6f76f1c262d1b0",
-            "218907bbc8c94d2bbe1cafccc7d03dfc",
-            "1d60a2f0a64f44a4908ce801f4df0d4a",
-            "348d7a15994c40289957627c9272b68e",
-            "6290fa176ef54f91afcc13cb073c440d",
-            "4edd1dfc970242edaf2f655d657121c4",
-            "0563097fcee44bf59423df29e68be8f3",
-            "302a1585536e40cf902acedfb04bd74b",
-            "c7baf7b917ac4805b63dd82e09f57b9e",
-            "cf2bf6b8779d486687052d71e3cd8c30"
+            "8e44b624894a4fe09ae81f41155d07bb",
+            "ea07236118d54b3f922d957fccf786c1",
+            "7a6ea3238dbe4f4e84e7b0a73ea508ed",
+            "c0543f98130744b69019ef2a07b5e582",
+            "a80b431e26cb4fb082672d2546f64682",
+            "337648b9321f4d84895e4b64cd5028da",
+            "98284015c8d544fc949ee75062fad033",
+            "7a97cba8bad2421b987d49c8b0af0a50",
+            "9fbc05883b9e478eb4ddbff12c772eb9",
+            "4707890617fe4fd5b2329b796572219d",
+            "24386898224b4c7c9866e0583ed501d6",
+            "b89629c95a1841c686e15e162ad62857",
+            "9c4b7237ac7741f1a6558285034238dd",
+            "62f4518afe5d42248bdf9cbd197ce468",
+            "0447a6372f34458596e1a3412359f8c6",
+            "eb69b4af6c5b4fe0ade5716503af0465",
+            "148f5422de2d44749ef5450591db6a97",
+            "d88ac7d11c124f6fb5bb908f06547f3e",
+            "860e43c890ee443d9a79c1578392acf6",
+            "08f217700a42480cb26a8a197c78e844"
           ]
         },
-        "outputId": "559a5601-e2c0-461f-fc5a-69f4d4d18f27"
+        "outputId": "e69a0f21-2962-4dc6-f898-b003d5f957d2"
       },
-      "execution_count": 56,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1051,24 +1053,10 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "c762aa0b624b4a6381eb27d14b374eb0"
+              "model_id": "8e44b624894a4fe09ae81f41155d07bb"
             }
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Prompt logged to https://www.comet.com/den-niz/ecom-shopbot\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "INFO:comet_llm.summary:Prompt logged to https://www.comet.com/den-niz/ecom-shopbot\n"
-          ]
         },
         {
           "output_type": "display_data",
@@ -1079,7 +1067,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "76ae806b323e4481918532225011870a"
+              "model_id": "9fbc05883b9e478eb4ddbff12c772eb9"
             }
           },
           "metadata": {}
